# gapic-generator-python

./: .coveragerc  .gitignore  .readthedocs.yml  .repo-metadata.json  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  README.rst  WORKSPACE  docker-entrypoint.sh  gapic.sh  nox.py  noxfile.py  owlbot.py  pyenv3wrapper.sh  pytest.ini  repositories.bzl  requirements.in  requirements.txt  setup.py  snippet_metadata.proto
.circleci/: config.yml
.githooks/: pre-commit
.github/: CODEOWNERS  header-checker-lint.yml  sync-repo-settings.yaml
.github/workflows/: main.yml  tests.yaml
.kokoro/: requirements.txt
.librarian/: state.yaml
api_factory/cli/: generate.py  pyacf.py
api_factory/generator/: __init__.py  formatter.py  generator.py  loader.py
api_factory/normalizer/: __init__.py  license.py  parser.py  schema.py
api_factory/schema/: __init__.py  api.py  api_naming.py  client_pb2.py  metadata.py  naming.py  wrappers.py
api_factory/templates/: setup.py.j2
api_factory/translator/: __init__.py  loader.py  schema.py  translator.py
api_factory/utils/: __init__.py  case.py  error_string.py  lines.py  mapping.py  sequences.py
docker/: Dockerfile  requirements.in  requirements.txt
docker/ci/: Dockerfile  requirements.in
docs/: api-configuration.rst  conf.py  getting-started.rst  index.rst  installing.rst  process.rst  templates.rst
docs/getting-started/: bazel.rst  docker-shortcut.rst  docker.rst  index.rst  local.rst
gapic/ads-templates/: .coveragerc.j2  noxfile.py.j2  setup.py.j2
gapic/cli/: generate.py  generate_gapic.py  generate_with_pandoc.py
gapic/configurable_snippetgen/: configured_snippet.py  libcst_utils.py  snippet_config_language_pb2.py  snippet_config_language_pb2.pyi
gapic/generator/: formatter.py  generator.py  options.py
gapic/samplegen/: manifest.py  samplegen.py  utils.py
gapic/samplegen_utils/: snippet_index.py  snippet_metadata.proto  snippet_metadata_pb2.py  types.py  utils.py  yaml.py
gapic/schema/: api.py  imp.py  metadata.py  mixins.py  naming.py  wrappers.py
gapic/templates/: .coveragerc.j2  .flake8.j2  .repo-metadata.json.j2  README.rst.j2  _base.py.j2  _pypi_packages.j2  _version.j2  mypy.ini.j2  noxfile.py.j2  noxfile.py.j2~  pytest.ini  setup.py.j2
gapic/utils/: __init__.py  cache.py  case.py  checks.py  code.py  lines.py  options.py  reserved_names.py  rst.py  uri_sample.py
rules_python_gapic/: BUILD.bazel  docstest.py  py_gapic.bzl  py_gapic_pkg.bzl  pydocstest.py  pytest.py
rules_python_gapic/test/: integration_test.bzl
showcase/: noxfile.py  setup.py
showcase/docs/: index.rst
showcase_nextgen/: MANIFEST.in  setup.py
showcase_nextgen/scripts/: fixup_showcase_v1beta1_keywords.py
showcase_nextgen/testing/: constraints-3.8.txt
test_utils/: test_utils.py
tests/configurable_snippetgen/: speech_createCustomClass.json  test_resources.py
tests/fragments/: test_api_version.proto  test_diregapic_forwardcompat_lro.proto  test_dynamic_routing.proto  test_enum_indexed_types.proto  test_flattened_value.proto  test_google_protobuf_type.proto  test_oneof_imported_response.proto  test_pagination_max_results_and_wrapper.proto  test_pagination_page_size.proto  test_reserved_field_name.proto  test_rest_streaming.proto  test_service_config.proto
tests/integration/: BUILD.bazel  cloudasset_v1.yaml  eventarc_v1.yaml  iamcredentials_v1.yaml  logging_internal_v2.yaml  logging_v2.yaml  redis_v1.yaml  showcase_grpc_service_config.json  showcase_v1beta1.yaml
tests/snippetgen/: snippets.proto  test_snippetgen.py
tests/system/: conftest.py  logging_test.py  test_api_version_header.py  test_client_context_manager.py  test_compliance.py  test_error_details.py  test_grpc_interceptor_streams.py  test_grpc_streams.py  test_grpc_unary.py  test_logging.py  test_lro.py  test_mixins.py  test_pagination.py  test_protobuf_responses.py  test_request_metadata.py  test_resource_crud.py  test_response_metadata.py  test_retry.py  test_retry_streaming.py  test_serialization.py  (+4 more)
(+1352 files in other folders)
